tests/paczka2/big_fuzzy/19724774.err
Error in line 6: S53 A931 80,1
Error in line 10: 8R2kUBbIeV A685 8,1
Error in line 21: 8R2kUBbIeV S53 77,4
Error in line 22: 8R2kUBbIeV A685 20,2
Error in line 20: L8xvlW1 S53 28,7
Error in line 28: L8xvlW1 A931 32,8
Error in line 26: 5bQfCw S53 42,4
Error in line 35: c4UyUGi14G A468 8,1
Error in line 44: 8R2kUBbIeV A468 110,6
Error in line 43: 5bQfCw A931 10,4
Error in line 77: c4UyUGi14G A685 35,7
Error in line 80: S53 A468 7,5
Error in line 96: 5bQfCw S53 220,4
Error in line 119: 8R2kUBbIeV A468 54,2
Error in line 116: L8xvlW1 A468 96,4
Error in line 121: eoLn A931 61,7
Error in line 129: c4UyUGi14G A931 44,6
Error in line 141: 8R2kUBbIeV S53 32,5
Error in line 145: 5bQfCw A468 36,7
Error in line 147: 5bQfCw A685 68,2
Error in line 146: S53 A468 96,8
Error in line 153: S53 A685 90,7
Error in line 158: 8R2kUBbIeV S53 46,9
Error in line 164: 8R2kUBbIeV A931 1,0
Error in line 176: 8R2kUBbIeV S53 19,1
Error in line 179: IuGJ A468 71,0
Error in line 191: c4UyUGi14G A468 51,8
Error in line 201: S53 S53 97,3
Error in line 205: S53 A931 87,9
Error in line 203: c4UyUGi14G A685 8,5
Error in line 208: S53 S53 75,6
Error in line 214: IuGJ A468 22,7
Error in line 218: S53 A468 21,9
Error in line 225: eoLn A931 65,9
Error in line 235: 8R2kUBbIeV A931 75,0
Error in line 249: IuGJ A468 34,1
